Add unit tests for controllers in the library system
- Created CategoryControllerTest to test CategoryController methods.
- Created LoanControllerTest to test LoanController methods.
- Created PenaltyControllerTest to test PenaltyController methods.
- Created ReservationControllerTest to test ReservationController methods.
- Created StudentControllerTest to test StudentController methods.

Each test class includes tests for CRUD operations and specific business logic, ensuring proper functionality and error handling.